ags (3.7.20)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ags-fx-envelope be explicite about floating point arithmetic
	* fixed ref count in ags_channel_set_link()
	* fixed ref count in ags_channel_recursive_run_stage() and related
	* fixed ref count in ags_input_next_active()
	* minor improvements

ags (3.7.19)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing listing of developer manual

ags (3.7.18)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved developer manual

ags (3.7.17)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed literal comparision in ags_apply_sound_config.c

ags (3.7.16)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* minor improvements

ags (3.7.15)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* added htmlhelp navigation and custom.css

ags (3.7.14)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed compiler error

ags (3.7.13)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented ags_playback_domain_insert_playback()
	* improved user's handbook images with default width

ags (3.7.12)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ags_pattern_dispose() to unset fields
	* minor code improvements

ags (3.7.11)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented ags_complex_get_term() and ags_complex_set_term() to query by real and imaginary part
	* improved API reference and fixed namespace and object tree
	* improved API reference and fixed missing sections

ags (3.7.10)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed broken API Reference Manual of libags_audio.so

ags (3.7.9)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* updated developer's doc chap10.xml to cover ags_fx_factory_create()
	* deprecated ags/audio/recall